generated/FlujoParser.js
// Generated from Flujo.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import FlujoListener from './FlujoListener.js';
import FlujoVisitor from './FlujoVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class FlujoParser extends antlr4.Parser {

    static grammarFileName = "Flujo.g4";
    static literalNames = [ null, "'flujo'", "'estado'", "'inicial'", "'final'", 
                            "'rol'", "'puede'", "'crear'", "'revisar'", 
                            "'aprobar'", "'rechazar'", "'archivar'", "'desde'", 
                            "'hacia'", "'cuando'", "'accion'", "'asignar'", 
                            "'registrar'", "'notificar'", "'con'", "'verdadero'", 
                            "'falso'", "'{'", "'}'", "'['", "']'", "'('", 
                            "')'", "';'", "','", "'.'", "'='", "'=='" ];
    static symbolicNames = [ null, "FLUJO", "ESTADO", "INICIAL", "FINAL", 
                             "ROL", "PUEDE", "CREAR", "REVISAR", "APROBAR", 
                             "RECHAZAR", "ARCHIVAR", "DESDE", "HACIA", "CUANDO", 
                             "ACCION", "ASIGNAR", "REGISTRAR", "NOTIFICAR", 
                             "CON", "VERDADERO", "FALSO", "LLAVE_IZQ", "LLAVE_DER", 
                             "CORCHETE_IZQ", "CORCHETE_DER", "PARENTESIS_IZQ", 
                             "PARENTESIS_DER", "PUNTO_COMA", "COMA", "PUNTO", 
                             "IGUAL", "IGUAL_IGUAL", "ID", "NUMBER", "STRING", 
                             "WS" ];
    static ruleNames = [ "programa", "definicion", "estado", "rol", "permiso", 
                         "transicion", "condicion", "accion", "instruccion", 
                         "notificacion", "valor", "booleano", "identificador", 
                         "cadena", "numero" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = FlujoParser.ruleNames;
        this.literalNames = FlujoParser.literalNames;
        this.symbolicNames = FlujoParser.symbolicNames;
    }



	programa() {
	    let localctx = new ProgramaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, FlujoParser.RULE_programa);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 30;
	        this.match(FlujoParser.FLUJO);
	        this.state = 31;
	        this.identificador();
	        this.state = 32;
	        this.match(FlujoParser.LLAVE_IZQ);
	        this.state = 36;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 299044) !== 0)) {
	            this.state = 33;
	            this.definicion();
	            this.state = 38;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 39;
	        this.match(FlujoParser.LLAVE_DER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	definicion() {
	    let localctx = new DefinicionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, FlujoParser.RULE_definicion);
	    try {
	        this.state = 46;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 2:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 41;
	            this.estado();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 42;
	            this.rol();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 43;
	            this.transicion();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 44;
	            this.accion();
	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 45;
	            this.notificacion();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	estado() {
	    let localctx = new EstadoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, FlujoParser.RULE_estado);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 48;
	        this.match(FlujoParser.ESTADO);
	        this.state = 49;
	        this.identificador();
	        this.state = 51;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3 || _la===4) {
	            this.state = 50;
	            _la = this._input.LA(1);
	            if(!(_la===3 || _la===4)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	        this.state = 53;
	        this.match(FlujoParser.PUNTO_COMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rol() {
	    let localctx = new RolContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, FlujoParser.RULE_rol);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 55;
	        this.match(FlujoParser.ROL);
	        this.state = 56;
	        this.identificador();
	        this.state = 57;
	        this.match(FlujoParser.PUEDE);
	        this.state = 58;
	        this.match(FlujoParser.CORCHETE_IZQ);
	        this.state = 59;
	        this.permiso();
	        this.state = 64;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===29) {
	            this.state = 60;
	            this.match(FlujoParser.COMA);
	            this.state = 61;
	            this.permiso();
	            this.state = 66;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 67;
	        this.match(FlujoParser.CORCHETE_DER);
	        this.state = 68;
	        this.match(FlujoParser.PUNTO_COMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	permiso() {
	    let localctx = new PermisoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, FlujoParser.RULE_permiso);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 70;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 3968) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	transicion() {
	    let localctx = new TransicionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, FlujoParser.RULE_transicion);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 72;
	        this.match(FlujoParser.DESDE);
	        this.state = 73;
	        this.identificador();
	        this.state = 74;
	        this.match(FlujoParser.HACIA);
	        this.state = 75;
	        this.identificador();
	        this.state = 76;
	        this.match(FlujoParser.CUANDO);
	        this.state = 77;
	        this.condicion();
	        this.state = 78;
	        this.match(FlujoParser.PUNTO_COMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condicion() {
	    let localctx = new CondicionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, FlujoParser.RULE_condicion);
	    try {
	        this.state = 88;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 80;
	            this.identificador();
	            this.state = 81;
	            this.match(FlujoParser.PUNTO);
	            this.state = 82;
	            this.permiso();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 84;
	            this.identificador();
	            this.state = 85;
	            this.match(FlujoParser.IGUAL_IGUAL);
	            this.state = 86;
	            this.valor();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	accion() {
	    let localctx = new AccionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, FlujoParser.RULE_accion);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 90;
	        this.match(FlujoParser.ACCION);
	        this.state = 91;
	        this.identificador();
	        this.state = 92;
	        this.match(FlujoParser.LLAVE_IZQ);
	        this.state = 96;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16 || _la===17) {
	            this.state = 93;
	            this.instruccion();
	            this.state = 98;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 99;
	        this.match(FlujoParser.LLAVE_DER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instruccion() {
	    let localctx = new InstruccionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, FlujoParser.RULE_instruccion);
	    try {
	        this.state = 113;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 16:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 101;
	            this.match(FlujoParser.ASIGNAR);
	            this.state = 102;
	            this.identificador();
	            this.state = 103;
	            this.match(FlujoParser.IGUAL);
	            this.state = 104;
	            this.valor();
	            this.state = 105;
	            this.match(FlujoParser.PUNTO_COMA);
	            break;
	        case 17:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 107;
	            this.match(FlujoParser.REGISTRAR);
	            this.state = 108;
	            this.match(FlujoParser.PARENTESIS_IZQ);
	            this.state = 109;
	            this.cadena();
	            this.state = 110;
	            this.match(FlujoParser.PARENTESIS_DER);
	            this.state = 111;
	            this.match(FlujoParser.PUNTO_COMA);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	notificacion() {
	    let localctx = new NotificacionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, FlujoParser.RULE_notificacion);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 115;
	        this.match(FlujoParser.NOTIFICAR);
	        this.state = 116;
	        this.identificador();
	        this.state = 117;
	        this.match(FlujoParser.CON);
	        this.state = 118;
	        this.cadena();
	        this.state = 119;
	        this.match(FlujoParser.PUNTO_COMA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	valor() {
	    let localctx = new ValorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, FlujoParser.RULE_valor);
	    try {
	        this.state = 125;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 35:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 121;
	            this.cadena();
	            break;
	        case 34:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 122;
	            this.numero();
	            break;
	        case 20:
	        case 21:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 123;
	            this.booleano();
	            break;
	        case 33:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 124;
	            this.identificador();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	booleano() {
	    let localctx = new BooleanoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, FlujoParser.RULE_booleano);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 127;
	        _la = this._input.LA(1);
	        if(!(_la===20 || _la===21)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	identificador() {
	    let localctx = new IdentificadorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, FlujoParser.RULE_identificador);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 129;
	        this.match(FlujoParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cadena() {
	    let localctx = new CadenaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, FlujoParser.RULE_cadena);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 131;
	        this.match(FlujoParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	numero() {
	    let localctx = new NumeroContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, FlujoParser.RULE_numero);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        this.match(FlujoParser.NUMBER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

FlujoParser.EOF = antlr4.Token.EOF;
FlujoParser.FLUJO = 1;
FlujoParser.ESTADO = 2;
FlujoParser.INICIAL = 3;
FlujoParser.FINAL = 4;
FlujoParser.ROL = 5;
FlujoParser.PUEDE = 6;
FlujoParser.CREAR = 7;
FlujoParser.REVISAR = 8;
FlujoParser.APROBAR = 9;
FlujoParser.RECHAZAR = 10;
FlujoParser.ARCHIVAR = 11;
FlujoParser.DESDE = 12;
FlujoParser.HACIA = 13;
FlujoParser.CUANDO = 14;
FlujoParser.ACCION = 15;
FlujoParser.ASIGNAR = 16;
FlujoParser.REGISTRAR = 17;
FlujoParser.NOTIFICAR = 18;
FlujoParser.CON = 19;
FlujoParser.VERDADERO = 20;
FlujoParser.FALSO = 21;
FlujoParser.LLAVE_IZQ = 22;
FlujoParser.LLAVE_DER = 23;
FlujoParser.CORCHETE_IZQ = 24;
FlujoParser.CORCHETE_DER = 25;
FlujoParser.PARENTESIS_IZQ = 26;
FlujoParser.PARENTESIS_DER = 27;
FlujoParser.PUNTO_COMA = 28;
FlujoParser.COMA = 29;
FlujoParser.PUNTO = 30;
FlujoParser.IGUAL = 31;
FlujoParser.IGUAL_IGUAL = 32;
FlujoParser.ID = 33;
FlujoParser.NUMBER = 34;
FlujoParser.STRING = 35;
FlujoParser.WS = 36;

FlujoParser.RULE_programa = 0;
FlujoParser.RULE_definicion = 1;
FlujoParser.RULE_estado = 2;
FlujoParser.RULE_rol = 3;
FlujoParser.RULE_permiso = 4;
FlujoParser.RULE_transicion = 5;
FlujoParser.RULE_condicion = 6;
FlujoParser.RULE_accion = 7;
FlujoParser.RULE_instruccion = 8;
FlujoParser.RULE_notificacion = 9;
FlujoParser.RULE_valor = 10;
FlujoParser.RULE_booleano = 11;
FlujoParser.RULE_identificador = 12;
FlujoParser.RULE_cadena = 13;
FlujoParser.RULE_numero = 14;

class ProgramaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlujoParser.RULE_programa;
    }

	FLUJO() {
	    return this.getToken(FlujoParser.FLUJO, 0);
	};

	identificador() {
	    return this.getTypedRuleContext(IdentificadorContext,0);
	};

	LLAVE_IZQ() {
	    return this.getToken(FlujoParser.LLAVE_IZQ, 0);
	};

	LLAVE_DER() {
	    return this.getToken(FlujoParser.LLAVE_DER, 0);
	};

	definicion = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DefinicionContext);
	    } else {
	        return this.getTypedRuleContext(DefinicionContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.enterPrograma(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.exitPrograma(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlujoVisitor ) {
	        return visitor.visitPrograma(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class DefinicionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlujoParser.RULE_definicion;
    }

	estado() {
	    return this.getTypedRuleContext(EstadoContext,0);
	};

	rol() {
	    return this.getTypedRuleContext(RolContext,0);
	};

	transicion() {
	    return this.getTypedRuleContext(TransicionContext,0);
	};

	accion() {
	    return this.getTypedRuleContext(AccionContext,0);
	};

	notificacion() {
	    return this.getTypedRuleContext(NotificacionContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.enterDefinicion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.exitDefinicion(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlujoVisitor ) {
	        return visitor.visitDefinicion(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class EstadoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlujoParser.RULE_estado;
    }

	ESTADO() {
	    return this.getToken(FlujoParser.ESTADO, 0);
	};

	identificador() {
	    return this.getTypedRuleContext(IdentificadorContext,0);
	};

	PUNTO_COMA() {
	    return this.getToken(FlujoParser.PUNTO_COMA, 0);
	};

	INICIAL() {
	    return this.getToken(FlujoParser.INICIAL, 0);
	};

	FINAL() {
	    return this.getToken(FlujoParser.FINAL, 0);
	};

	enterRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.enterEstado(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.exitEstado(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlujoVisitor ) {
	        return visitor.visitEstado(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class RolContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlujoParser.RULE_rol;
    }

	ROL() {
	    return this.getToken(FlujoParser.ROL, 0);
	};

	identificador() {
	    return this.getTypedRuleContext(IdentificadorContext,0);
	};

	PUEDE() {
	    return this.getToken(FlujoParser.PUEDE, 0);
	};

	CORCHETE_IZQ() {
	    return this.getToken(FlujoParser.CORCHETE_IZQ, 0);
	};

	permiso = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(PermisoContext);
	    } else {
	        return this.getTypedRuleContext(PermisoContext,i);
	    }
	};

	CORCHETE_DER() {
	    return this.getToken(FlujoParser.CORCHETE_DER, 0);
	};

	PUNTO_COMA() {
	    return this.getToken(FlujoParser.PUNTO_COMA, 0);
	};

	COMA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(FlujoParser.COMA);
	    } else {
	        return this.getToken(FlujoParser.COMA, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.enterRol(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.exitRol(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlujoVisitor ) {
	        return visitor.visitRol(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PermisoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlujoParser.RULE_permiso;
    }

	CREAR() {
	    return this.getToken(FlujoParser.CREAR, 0);
	};

	REVISAR() {
	    return this.getToken(FlujoParser.REVISAR, 0);
	};

	APROBAR() {
	    return this.getToken(FlujoParser.APROBAR, 0);
	};

	RECHAZAR() {
	    return this.getToken(FlujoParser.RECHAZAR, 0);
	};

	ARCHIVAR() {
	    return this.getToken(FlujoParser.ARCHIVAR, 0);
	};

	enterRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.enterPermiso(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.exitPermiso(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlujoVisitor ) {
	        return visitor.visitPermiso(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class TransicionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlujoParser.RULE_transicion;
    }

	DESDE() {
	    return this.getToken(FlujoParser.DESDE, 0);
	};

	identificador = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(IdentificadorContext);
	    } else {
	        return this.getTypedRuleContext(IdentificadorContext,i);
	    }
	};

	HACIA() {
	    return this.getToken(FlujoParser.HACIA, 0);
	};

	CUANDO() {
	    return this.getToken(FlujoParser.CUANDO, 0);
	};

	condicion() {
	    return this.getTypedRuleContext(CondicionContext,0);
	};

	PUNTO_COMA() {
	    return this.getToken(FlujoParser.PUNTO_COMA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.enterTransicion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.exitTransicion(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlujoVisitor ) {
	        return visitor.visitTransicion(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class CondicionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlujoParser.RULE_condicion;
    }

	identificador() {
	    return this.getTypedRuleContext(IdentificadorContext,0);
	};

	PUNTO() {
	    return this.getToken(FlujoParser.PUNTO, 0);
	};

	permiso() {
	    return this.getTypedRuleContext(PermisoContext,0);
	};

	IGUAL_IGUAL() {
	    return this.getToken(FlujoParser.IGUAL_IGUAL, 0);
	};

	valor() {
	    return this.getTypedRuleContext(ValorContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.enterCondicion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.exitCondicion(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlujoVisitor ) {
	        return visitor.visitCondicion(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AccionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlujoParser.RULE_accion;
    }

	ACCION() {
	    return this.getToken(FlujoParser.ACCION, 0);
	};

	identificador() {
	    return this.getTypedRuleContext(IdentificadorContext,0);
	};

	LLAVE_IZQ() {
	    return this.getToken(FlujoParser.LLAVE_IZQ, 0);
	};

	LLAVE_DER() {
	    return this.getToken(FlujoParser.LLAVE_DER, 0);
	};

	instruccion = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(InstruccionContext);
	    } else {
	        return this.getTypedRuleContext(InstruccionContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.enterAccion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof FlujoListener ) {
	        listener.exitAccion(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof FlujoVisitor ) {
	        return visitor.visitAccion(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class InstruccionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = FlujoParser.RULE_instruccion;
    }

	ASIGNAR() {
	    return this.getToken(FlujoParser.ASIGNAR, 0);
	};

	identificador() {
	    return this.getTypedRuleContext(IdentificadorContext,0);
	};
